# FLYP

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
flyp/: few_shot.py  main.py
flyp/clip/: clip.py
flyp/datacreation_scripts/: fmow_csv_creator.py  imagenet_csv_creator.py
flyp/flyp/models/: flyp_loss_few_shot.py  modeling.py
flyp/models/: ce_ablation.py  eval.py  fisher.py  flyp_loss.py  flyp_loss_few_shot.py  linear_lbfgs.py  modeling.py  zeroshot.py
src/flyp/models/: ce_ablation.py  linear_lbfgs.py
src/flyp/templates/: simple_template.py
