[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flyp"
description = "FLYP: Finetune Like You Pretrain."
license = { text = "MIT" }
authors = [
  { name = "Sachin Goyal" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
readme = "README.md"
dynamic = ["dependencies"]
version = "0.1.0"

[project.urls]
documentation = "https://pages.github.boschdevcloud.com/CR/aim-404"
homepage = "https://pages.github.boschdevcloud.com/CR/aim-404"
repository = "https://github.boschdevcloud.com/CR/aim-404"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
