[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flyp"
description = "FLYP: Finetune Like You Pretrain."
license = { text = "MIT" }
authors = [
  { name = "Sachin Goyal" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
readme = "README.md"
dynamic = ["dependencies"]
version = "0.1.0"

[tool.setuptools]
packages = ["flyp"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
